# KCluster

./: CMakeLists.txt  KClusterParallel  README.md  build_and_run.sh  main  main.c  mainParallel.c  mainParallel_NoGUI.c  mainSerial.c
